회원목록 2. 로그인

--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>sdfsf</h2>
+<form action="/member/login" method="post">
+    이메일 입력 : <input type="text" name="memberEmail" placeholder="이메일"><br>
+    비밀번호 입력 : <input type="text" name="memberPassword" placeholder="비밀번호"><br>
+    <input type="submit" value="로그인">
+</form>
 </body>
 </html>
