--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -1,17 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <th:block th:replace="~{component/config :: config}"></th:block>
 </head>
 <body>
+<div th:replace="~{component/header :: header}"></div>
 <form action="/member/login" method="post">
     이메일 입력 : <input type="text" name="memberEmail" placeholder="이메일"><br>
     비밀번호 입력 : <input type="text" name="memberPassword" placeholder="비밀번호"><br>
     <input type="submit" value="로그인">
 </form>
+<div th:replace="~{component/footer :: footer}"></div>
+
 </body>
 </html>
