--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <h2>index</h2>
 <a href="/member/save ">회원가입</a>
 <a href="/member/login">로그인페이지</a>
-<a href="/members ">목록출력</a>
+<a href="/member">목록출력</a>
 </body>
 </html>
