--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <div th:replace="~{component/header :: header}"></div>
+<div th:replace="~{component/nav :: nav}"></div>
 <form action="/member/login" method="post">
     이메일 입력 : <input type="text" name="memberEmail" placeholder="이메일"><br>
     비밀번호 입력 : <input type="text" name="memberPassword" placeholder="비밀번호"><br>
