--- a/src/main/resources/templates/memberPages/memberMain.html
+++ b/src/main/resources/templates/memberPages/memberMain.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="~{component/config :: config}"></th:block>
 </head>
 <body>
 <div th:replace="~{component/header :: header}"></div>
+<div th:replace="~{component/nav :: nav}"></div>
+
+<div class="container">
     <p th:text="|${session.loginEmail} 님 환영합니다!|"></p>
+</div>
+
 <div th:replace="~{component/footer :: footer}"></div>
 
 </body>
