--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -8,22 +8,19 @@
 <div th:replace="~{component/nav :: nav}"></div>
 
 <div class="container">
-  <!-- 화면에 보여질 내용이 들어갈 부분 -->
   <table class="table table-hover">
     <tr>
       <th>id</th>
-      <th>이메일</th>
-      <th>이름</th>
-      <th>생년월일</th>
-      <th>전화번호</th>
-      <th>조회</th>
-      <th>수정</th>
+      <th>email</th>
+      <th>name</th>
+      <th>birth</th>
+      <th>mobile</th>
     </tr>
     <tr th:each="member: ${memberList}">
+      <td th:text="${member.id}"></td>
       <td>
-        <a th:href="@{|/member/${member.id}|}" th:text="${member.id}"></a>
+        <a th:href="@{|/member/${member.id}|}" th:text="${member.memberEmail}"></a>
       </td>
-      <td th:text="${member.memberEmail}"></td>
       <td th:text="${member.memberName}"></td>
       <td th:text="${member.memberBirth}"></td>
       <td th:text="${member.memberMobile}"></td>
@@ -31,13 +28,13 @@
         <button th:onclick="member_detail([[${member.id}]])">조회</button>
       </td>
       <td>
-        <button th:onclick="member_update([[${member.id}]])">수정</button>
-      </td>
-      <td>
         <button th:onclick="member_delete([[${member.id}]])">삭제</button>
       </td>
     </tr>
   </table>
+  <div id="detail-area">
+
+  </div>
 </div>
 
 <div th:replace="~{component/footer :: footer}"></div>
@@ -45,10 +42,36 @@
 </body>
 <script th:inline="javascript">
   const member_detail = (id) => {
-    location.href = `/member/${id}`;
+    // location.href = `/member/${id}`;
+    const detailArea = document.querySelector("#detail-area");
+    axios({
+      method: "get",
+      url: `/member/axios/${id}`
+    }).then(res => {
+      console.log("res", res);
+      console.log("data", res.data);
+      console.log("email", res.data.memberEmail);
+      let result = "<table class=\"table table-striped\">\n" +
+              "    <tr>\n" +
+              "      <th>id</th>\n" +
+              "      <td>" + res.data.id + "</td>\n" +
+              "    </tr>\n" +
+              "    <tr>\n" +
+              "      <th>email</th>\n" +
+              "      <td>" + res.data.memberEmail + "</td>\n" +
+              "    </tr>\n" +
+              "    <tr>\n" +
+              "      <th>name</th>\n" +
+              "      <td>" + res.data.memberName + "</td>\n" +
+              "    </tr>\n" +
+              "  </table>";
+      detailArea.innerHTML = result;
+    }).catch(err => {
+      console.log("err", err);
+    });
   }
   const member_delete = (id) => {
-    location.href = `/member/delete${id}`;
+    location.href = `/member/delete/${id}`;
   }
 </script>
 </html>
