--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="~{component/config :: config}"></th:block>
@@ -6,11 +6,14 @@
 <body>
 <div th:replace="~{component/header :: header}"></div>
 <div th:replace="~{component/nav :: nav}"></div>
-<form action="/member/login" method="post">
-    이메일 입력 : <input type="text" name="memberEmail" placeholder="이메일"><br>
-    비밀번호 입력 : <input type="text" name="memberPassword" placeholder="비밀번호"><br>
-    <input type="submit" value="로그인">
-</form>
+<div class="container">
+    <form action="/member/login" method="post">
+        <input type="hidden" name="redirectURI" th:value="${redirectURI}">
+        <input type="text" name="memberEmail" placeholder="이메일"> <br>
+        <input type="text" name="memberPassword" placeholder="비밀번호"> <br>
+        <input type="submit" value="로그인">
+    </form>
+</div>
 <div th:replace="~{component/footer :: footer}"></div>
 
 </body>
